@@ -257,7 +257,7 @@ GRUB_MOD_INIT(hashsum)
   cmd = grub_register_extcmd ("hashsum", grub_cmd_hashsum, 0,
 			      "hashsum -h HASH [-c FILE [-p PREFIX]] "
 			      "[FILE1 [FILE2 ...]]",
-			      "Compute or check hash checksum.",
+			      N_("Compute or check hash checksum."),
 			      options);
   cmd_md5 = grub_register_extcmd ("md5sum", grub_cmd_hashsum, 0,
 				  N_("[-c FILE [-p PREFIX]] "
@@ -267,12 +267,12 @@ GRUB_MOD_INIT(hashsum)
   cmd_sha1 = grub_register_extcmd ("sha1sum", grub_cmd_hashsum, 0,
 				   N_("[-c FILE [-p PREFIX]] "
 				      "[FILE1 [FILE2 ...]]"),
-				   "Compute or check hash checksum.",
+				   N_("Compute or check hash checksum."),
 				   options);
   cmd_sha256 = grub_register_extcmd ("sha256sum", grub_cmd_hashsum, 0,
 				     N_("[-c FILE [-p PREFIX]] "
 					"[FILE1 [FILE2 ...]]"),
-				     "Compute or check hash checksum.",
+				     N_("Compute or check hash checksum."),
 				     options);
   cmd_sha512 = grub_register_extcmd ("sha512sum", grub_cmd_hashsum, 0,
 				     N_("[-c FILE [-p PREFIX]] "
